# yocto_hello_world

./: LICENSE.txt  Makefile.am  README.md  configure.ac  hello.c  hello.h
